BUG : Total is not aligned with cart icon
In the header the grand total is not aligned with the icon.
Created a single style to use on both the 'My Profile' block and the
 cart block.
Use this style to align the icons with the text beneath them.

--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -18,26 +18,20 @@
 
 	&Label
 		font-size: 1.8rem
-		margin-left: -4rem
+		// margin-left: -4rem
 		/*	Match the padding from the menu a for "My Profile"
 		padding-top: .5rem
 		padding-bottom: .5rem
 
-	&Dropdown
+	&Block
 		min-width: 9rem
 		display: flex
 		flex-direction: column
-
-	li:not(:last-child)
-		margin-right: 2rem
+		justify-content: space-between
+		align-items: center
 
 #cartIcon
 	color: $accentDark
 
-.cartSection
-	min-width: 9rem
-	display: flex
-	flex-direction: column
-	justify-content: space-between
 
 /*===== END  Header  =====*/
